# Zip-Image-via-C-

Data/: bokeh.tif  budgies.tif  butterfly.tif  eggs.tif  sailboat.tif  shark.tif  sheep.tif  taj.tif  town.tif
Source Code/: CMakeLists.txt  CMakeSettings.json
Source Code/src/: DCT.cpp  DCT.h  Main.cxx  Parser.cpp  Parser.h  Quantization.cpp  Quantization.h  Util.h
